--- a/vite-reduxtoolkit-101/toolkit-101/src/index.css
+++ b/vite-reduxtoolkit-101/toolkit-101/src/index.css
@@ -2,8 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  height: 97vh;
-  width: 100vw; 
-  border: 1px solid gray;
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(94 191 195);
+  background-image: url("../public/bg.png");
+  background-size: cover;
+  background-position: fixed;
+  background-size: 40%;
+}
+
+.board {
+  max-width: 90%;
+  width: 100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: auto;
+  width: 99vw;
+  margin: auto; /* Added to center the board */
+  background-size: cover; /* Changed to cover to close image stretching */
 }
