--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -16,10 +16,15 @@ body {
   background-size: 40%;
 }
 
+.bg {
+  height: 100%;
+}
 .board {
+  background-image: url("../public/hearthstone-board-2.png");
   max-width: 90%;
   width: 100px;
   position: fixed;
+  height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
