--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -3,31 +3,25 @@
 @tailwind utilities;
 
 body {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
+  height: 930px; 
+  width: 1850px; 
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(94 191 195);
   background-image: url("../public/bg.png");
-  background-size: cover;
-  background-position: fixed;
-  background-size: 40%;
+  background-size: contain;
+  overflow-y: hidden;
+  background-repeat: repeat;
 }
 
 .board {
-  height: 100%;
-  background-image: url("../public/hearthstone-board-2.png");
-  max-width: 90%;
-  width: 100px;
   position: fixed;
-  top: 50%;
+  height: 850px; 
+  width: 1750px;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 99vw;
-  margin: auto; /* Added to center the board */
-  background-size: cover; /* Changed to cover to close image stretching */
+  transform: translate(-50%, 30px);
+  background-image: url("../public/hearthstone-board-2.png");
 }
