clear unnecessary code

--- a/vite-reduxtoolkit-101/hearstone/src/App.css
+++ b/vite-reduxtoolkit-101/hearstone/src/App.css
@@ -5,16 +5,16 @@
 }
 
 .logo {
-  height: 96px; /* 6em converted to px assuming base font size is 16px */
-  padding: 24px; /* 1.5em converted to px assuming base font size is 16px */
+  height: 96px;
+  padding: 24px;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 32px #646cffaa); /* 2em converted to px assuming base font size is 16px */
+  filter: drop-shadow(0 0 32px #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 32px #61dafbaa); /* 2em converted to px assuming base font size is 16px */
+  filter: drop-shadow(0 0 32px #61dafbaa);
 }
 
 @keyframes logo-spin {
@@ -33,7 +33,7 @@
 }
 
 .card {
-  padding: 32px; /* 2em converted to px assuming base font size is 16px */
+  padding: 32px;
 }
 
 .read-the-docs {
