--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(94 191 195);
+  background-color: rgb(0, 217, 224);
   background-image: url("../public/bg.png");
   background-size: contain;
   overflow-y: hidden;
