--- a/vite-reduxtoolkit-101/hearstone/src/components/features/EndTurnButton/EndTurnButton.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/EndTurnButton/EndTurnButton.css
@@ -5,10 +5,11 @@
   height: 63px;
   top: 21.2pc;
   right: 35.4pc;
-  background-color: #FFD700;
+  background-color: rgb(153, 158, 7);
   transition: background-color 0.3s;
 }
 
 .end-turn-button:hover {
-  background-color: #FFA500; /
+  background-color: rgb(83 72 79);
+  /
 }
