--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -9,12 +9,13 @@ body {
 }
 
 .board {
+  box-shadow: rgba(227, 0, 0, 0.75) 3px 3px 44px 38px, rgba(213, 211, 34, 0.75) 3px 3px 39px 41px, rgba(0, 0, 0, 1) 0px 0px 0px 1px;
   background-image: url("../public/hearthstone-board-2.png");
   position: fixed;
   background-repeat: no-repeat;
   background-size: contain;
   height: 850px;
-  width: 1750px;
+  width: 1420px;
   margin-left: 180px;
   margin-top: 33px;
 }
