create deck alignment

--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -9,12 +9,12 @@ body {
 }
 
 .board {
+  position: relative;
   box-shadow: 
     rgba(0, 0, 20, 0.75) 3px 3px 44px 38px, 
     rgba(0, 10, 50, 0.75) 3px 3px 39px 41px, 
     rgba(0, 0, 0, 1) 0px 0px 0px 1px;
   background-image: url("../public/hearthstone-board-2.png");
-  position: fixed;
   background-repeat: no-repeat;
   background-size: contain;
   height: 849px;
@@ -22,3 +22,12 @@ body {
   margin-left: 180px;
   margin-top: 40px;
 }
+
+.deck-position {
+  background: red;
+  left: 494px;
+  top: 706px;
+  width: 367px;
+}
+
+
