create hidden layer for card orientation🃏

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
@@ -1,7 +1,6 @@
 .deck {
-    background: red;
-    left: 494px;
-    top: 706px;
-    width: 367px;
+  left: 494px;
+  top: 706px;
+  width: 367px;
+  clip-path: polygon(0 -1%, 100% 1%, 100% 67%, 0% 67%)
 }
- 
