justify deck cards

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
@@ -2,5 +2,6 @@
   left: 494px;
   top: 706px;
   width: 367px;
-  clip-path: polygon(0 -1%, 100% 1%, 100% 67%, 0% 67%)
-}
+  clip-path: polygon(0 -1%, 105% 0%, 105% 67%, 1% 67%);
+
+ 
