create turn popup after end turn with all functionalities

--- a/vite-reduxtoolkit-101/hearstone/src/output.css
+++ b/vite-reduxtoolkit-101/hearstone/src/output.css
@@ -554,12 +554,12 @@ video {
   display: none;
 }
 
-.static {
-  position: static;
-}
-
 .absolute {
   position: absolute;
+}
+
+.relative {
+  position: relative;
 }
 
 .bottom-0 {
