--- a/vite-reduxtoolkit-101/hearstone/src/components/features/UI/EndTurnButton/EndTurnButton.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/UI/EndTurnButton/EndTurnButton.css
@@ -1,20 +1,16 @@
 .end-turn-button {
   clip-path: polygon(49% 3%, 82% 9%, 98% 19%, 98.5% 84%, 80% 94%, 51% 100%, 24% 92%, 2.4% 79%, 2% 20%, 28% 6%);
   position: absolute;
-  width: 117px;
+  width: 114px;
   height: 63px;
   top: 21.2pc;
   right: 14.8pc;
-  background-color: rgb(153, 158, 7);
   transition: background-color 0.3s;
+  background-size: cover;
+  background-position: center;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
-}
-
-.end-turn-button:hover {
-  background-color: rgb(83 72 79);
-  /
 }
