--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Deck/Deck.css
@@ -1,6 +1,7 @@
 .deck {
-  left: 100px;
-  top: 0;
+  left: 494px;
+  top: 706px;
   width: 367px;
+  clip-path: polygon(0 -1%, 105% 0%, 105% 67%, 1% 67%);
 }
  
