create single card demonstration state

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/GameCard/SingleGameCard.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/GameCard/SingleGameCard.css
@@ -1,6 +1,8 @@
-
-.game-card {
-    z-index: 1;
+.single-game-card {
+  z-index: 1;
+  position: absolute;
+  top: 200px;
+  left: 571px;
   }
   
   .card-cost {
