create hover, leave effects when card picking

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Hand/Hand.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Hand/Hand.css
@@ -1,7 +1,7 @@
 .hand {
   left: 435px;
-  top: 706px;
+  top:690px;
   width: 367px;
-  clip-path: polygon(0 0%, 122% 2%, 121% 67%, 1% 67%);
+  clip-path: polygon(0 -34%, 194% -14%, 121% 74%, 1% 73%)
 }
  
