make pixel perfect board

--- a/vite-reduxtoolkit-101/hearstone/src/index.css
+++ b/vite-reduxtoolkit-101/hearstone/src/index.css
@@ -10,17 +10,15 @@ body {
 
 .board {
   position: relative;
-  box-shadow: 
-    rgba(0, 0, 20, 0.75) 3px 3px 44px 38px, 
-    rgba(0, 10, 50, 0.75) 3px 3px 39px 41px, 
-    rgba(0, 0, 0, 1) 0px 0px 0px 1px;
-  background-image: url("../public/hearthstone-board-2.png");
+  box-shadow: rgba(0, 0, 20, 0.75) 3px 3px 44px 38px,
+    rgba(0, 10, 50, 0.75) 3px 3px 39px 41px, rgba(0, 0, 0, 1) 0px 0px 0px 1px;
+  background-image: url(/public/hearthstone-board-2.png);
   background-repeat: no-repeat;
   background-size: contain;
   height: 849px;
-  width: 1420px;
+  width: 1421px;
   margin-left: 180px;
-  margin-top: 40px;
+  margin-top: 71px;
 }
 
 .deck-position {
@@ -29,5 +27,3 @@ body {
   top: 706px;
   width: 367px;
 }
-
-
