create board card design and remove functionality

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Board/Board.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Board/Board.css
@@ -1,5 +1,6 @@
 .board-cards {
-        left: 333px;
-        top:111px;
-        width: 367px;
+  left: 733px;
+  top: 393px;
+  width: 703px;
+  min-height: 117px;
 }
