add logic: async check playable card, reduce mana

--- a/vite-reduxtoolkit-101/hearstone/src/output.css
+++ b/vite-reduxtoolkit-101/hearstone/src/output.css
@@ -566,10 +566,6 @@ video {
   bottom: 0px;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
 .m-3 {
   margin: 0.75rem;
 }
@@ -603,12 +599,12 @@ video {
   padding-right: 0.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-sky-400 {
   --tw-text-opacity: 1;
   color: rgb(56 189 248 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
