--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Board/BoardCard.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/Board/BoardCard.css
@@ -5,7 +5,7 @@
 }
 
 .board-card-image {
-    clip-path: ellipse(49% 49% at 50% 50%);
+    clip-path: ellipse(46% 49% at 47% 45%);
     height: 117px;
     width: 96px;
     z-index: -1;
@@ -14,8 +14,8 @@
 }
  
 .board-frame {
-    width: 100px;
-    min-width: 100px;
+    width: 89px;
+    min-width: 89px;
     z-index: -1;
     top: 0;
     left: 0;
@@ -23,12 +23,14 @@
 
 .board-card-attack {
     position: absolute;
-    bottom: 18px;
-    left: 15px;
+    font-weight: 700;
+    bottom: 17px;
+    left: 14px;
 }
 
 .board-card-health {
     position: absolute;
-    bottom: 17px;
+    font-weight: 500;
+    bottom: 19px;
     right: 12px;
 }
