change client container structure and simplify relativity

--- a/vite-reduxtoolkit-101/hearstone/src/output.css
+++ b/vite-reduxtoolkit-101/hearstone/src/output.css
@@ -578,6 +578,10 @@ video {
   flex-direction: row;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
@@ -607,9 +611,4 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
