--- a/vite-reduxtoolkit-101/hearstone/src/components/features/UI/ManaBox/ManaBox.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/UI/ManaBox/ManaBox.css
@@ -1,16 +1,19 @@
 .mana-container {
   position: absolute;
-  top: 46.55pc;
-  left: 54.8pc;
 }
 
 .mana-cyrstal {
   width: 18px;
   height: 18px;
-  padding-top: 1px;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+}
+
+.mana-cyrstals{
+  margin-left: 66px;
+  margin-top: 4.5px;
+  width: 229px;
 }
