--- a/vite-reduxtoolkit-101/hearstone/src/components/features/Card/GameCard/GameCard.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/Card/GameCard/GameCard.css
@@ -1,6 +1,7 @@
 
 .game-card {
   z-index: 1;
+  transform-origin: bottom;
 }
 
 .backside-game-card{
@@ -76,6 +77,5 @@
 
 .game-card-frame {
   width: 200px;
-  min-height: 213px;
-  min-width: 147px;
+  min-width: 120px;
 }
