create loading screen and end game component

--- a/vite-reduxtoolkit-101/hearstone/src/components/features/UI/GameManagement/LoadingScreen.css
+++ b/vite-reduxtoolkit-101/hearstone/src/components/features/UI/GameManagement/LoadingScreen.css
@@ -3,6 +3,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #5c310c;
   z-index: 1000;   
+}
+
+.loading {
+  color: #a7957b
+  
 }
